<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <EditText
        android:id="@+id/register_email_edit_text"
        style="@style/RegisterFields"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/register_password_edit_text"
        style="@style/RegisterFields"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <RadioGroup
        style="@style/RegisterFields"
        android:layout_margin="@dimen/default8_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/register_radio_teacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/register_radio_student"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    </RadioGroup>

    <TextView
        android:id="@+id/register_error_text_view"
        style="@style/RegisterFields"
        android:textColor="@color/red"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/register_loading_progress_bar"
        android:layout_width="@dimen/progress_bar_dimens"
        android:layout_height="@dimen/progress_bar_dimens"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <Button
        android:id="@+id/next_button"
        style="@style/RegisterFields"
        android:layout_marginTop="@dimen/default16_margin"
        android:text="@string/next" />

    <TextView
        android:id="@+id/click_login_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default16_margin"
        android:gravity="center_horizontal"
        android:text="@string/click_here_to_login"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

</LinearLayout>