<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <EditText
        android:id="@+id/login_email_edit_text"
        style="@style/RegisterFields"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/login_password_edit_text"
        style="@style/RegisterFields"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/login_error_text_view"
        style="@style/RegisterFields"
        android:textColor="@color/red"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/login_loading_progress_bar"
        android:layout_width="@dimen/progress_bar_dimens"
        android:layout_height="@dimen/progress_bar_dimens"
        android:layout_gravity="center_horizontal"
        android:visibility="gone" />

    <Button
        android:id="@+id/login_button"
        style="@style/RegisterFields"
        android:layout_marginTop="@dimen/default16_margin"
        android:text="@string/login" />

    <TextView
        android:id="@+id/click_register_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default16_margin"
        android:gravity="center_horizontal"
        android:text="@string/click_here_to_register"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

</LinearLayout>