<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="vertical"
android:layout_gravity="center_vertical">

    <LinearLayout
        style="@style/RegisterFields">

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:id="@+id/register_teacher_first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <EditText
                android:id="@+id/register_teacher_last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>


    <android.support.design.widget.TextInputLayout
        style="@style/RegisterFields">
        <EditText
            android:id="@+id/register_teacher_telephone_number_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/telephone_number" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        style="@style/RegisterFields">
        <EditText
            android:id="@+id/register_teacher_subject_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/subject" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        style="@style/RegisterFields">
        <EditText
            android:id="@+id/register_teacher_city_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/city" />
    </android.support.design.widget.TextInputLayout>


    <TextView
        android:id="@+id/register_teacher_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default16_margin"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:background="@color/red" />


    <ProgressBar
        android:id="@+id/register_teacher_loading_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateDrawable="@drawable/progress_icon"
        android:visibility="gone"
        android:layout_gravity="center_horizontal" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/register_teacher_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_margin="@dimen/default8_margin"
        android:background="@color/colorAccent"
        android:textColor="@color/white" />

</LinearLayout>